# ragline-v1

./: .gitignore  README.md  app.py  chunk_embed.py  climbing.md  lion-quick-guide-chunks.txt  main.js  main.py  package-lock.json  package.json  parseClimb.py  pyproject.toml
elephant/: elephant.md  parse_elephant.py
lion/: chunk_lion.py  chunked_lion.md  lion.md  parse_lion.py
output/: ANAC+2024+Digital.txt  lion-quick-guide.txt
