[project]
name = "parse-test"
version = "0.1.0"
description = ""
authors = [
    {name = "t-fb",email = " t.fabrigar@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "docling (>=2.60.0,<3.0.0)",
    "llama-index (>=0.14.7,<0.15.0)"
]

[tool.poetry] 
package-mode = false



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
